--- a/tables/factbook/index.html
+++ b/tables/factbook/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <title>CIA Factbook</title>
-<link rel="stylesheet" type="text/css" href="Libraries/chosen.min.css" />
-<link rel="stylesheet" type="text/css" href="StyleSheets/Factbook.css" />
+<link rel="stylesheet" type="text/css" href="libraries/chosen.min.css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 <h2>CIA Factbook</h2>
@@ -37,10 +37,10 @@
 <div id="factbookInfographic">
 </div>
 
-<script type="text/javascript" src="Libraries/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="Libraries/d3.min.js"></script>
-<script type="text/javascript" src="Libraries/chosen.jquery.min.js"></script>
-<script type="text/javascript" src="Scripts/Factbook.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
+<script type="text/javascript" src="libraries/chosen.jquery.min.js"></script>
+<script type="text/javascript" src="visualizationScripts.js"></script>
 
 <script type="text/javascript">
 /* http://bl.ocks.org/mbostock/3884955 */
