--- a/tables/factbook/FactbookDataAggregation.html
+++ b/tables/factbook/FactbookDataAggregation.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
 <script type="text/javascript">
     // Base filepath, folders, filenames...
-    var path = "statistics1";
+    var path = "statistics";
     var filename_data = path + "/" + 'data.json';
     var path_individual = path + "/" + "individual_data";
     var filename_gdp = path_individual + "/" + "country_gdp.json",
